examples/fail/parse/missing_semicolon.dew
// expect error: [E002]
def x = 42];
